fixed homepage path in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tip-calculator-app-main",
-  "homepage": "https://github.com/bmagana5/tip-calculator-app",
+  "homepage": "https://bmagana5.github.io/tip-calculator-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
